Switch back to macos-13 so we get an x86 image

--- a/.github/workflows/mn-macos-snapshot.yml
+++ b/.github/workflows/mn-macos-snapshot.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Builds OS X Native CLI
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - name: "⬇ Checkout the repository"
         uses: actions/checkout@v4
