--- a/.github/workflows/mn-macos-arm-snapshot.yml
+++ b/.github/workflows/mn-macos-arm-snapshot.yml
@@ -8,8 +8,8 @@ on:
       - '[1-9]+.[0-9]+.x'
 jobs:
   build:
-    name: Builds OS X Intel Native CLI
-    runs-on: macos-13
+    name: Builds OS X Arm Native CLI
+    runs-on: macos-latest
     steps:
       - name: "⬇ Checkout the repository"
         uses: actions/checkout@v4
@@ -36,13 +36,13 @@ jobs:
         env:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
-          mkdir -p mn-darwin-amd64-snapshot/bin
-          mv ./starter-cli/build/native/nativeCompile/mn mn-darwin-amd64-snapshot/bin
-          cp ./LICENSE mn-darwin-amd64-snapshot/
-          zip -r mn-darwin-amd64-snapshot.zip ./mn-darwin-amd64-snapshot -x '*.DS_Store*' -x '__MAC_OSX'
+          mkdir -p mn-darwin-aarch64-snapshot/bin
+          mv ./starter-cli/build/native/nativeCompile/mn mn-darwin-aarch64-snapshot/bin
+          cp ./LICENSE mn-darwin-aarch64-snapshot/
+          zip -r mn-darwin-aarch64-snapshot.zip ./mn-darwin-aarch64-snapshot -x '*.DS_Store*' -x '__MAC_OSX'
       - name: "🆙 Upload Snapshot"
         if: success() && github.event_name == 'push' && github.ref == 'refs/heads/4.4.x'
         uses: actions/upload-artifact@v4
         with:
-          name: mn-darwin-amd64-snapshot
-          path: mn-darwin-amd64-snapshot.zip
+          name: mn-darwin-aarch64-snapshot
+          path: mn-darwin-aarch64-snapshot.zip
