Update Gradle plugin to 4.3.8 for Micronaut 4.4.2 (#2472)
* Update Gradle plugin to 4.3.8 for Micronaut 4.4.2

Includes a fix for Kotlin implementation configuration in Gradle

* Update graalvm config for osx native build

* Switch back to macos-13 so we get an x86 image

--- a/.github/workflows/mn-macos-snapshot.yml
+++ b/.github/workflows/mn-macos-snapshot.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Builds OS X Native CLI
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - name: "⬇ Checkout the repository"
         uses: actions/checkout@v4
@@ -18,8 +18,8 @@ jobs:
       - name: "☕️ Setup GraalVM CE"
         uses: graalvm/setup-graalvm@v1.1.9
         with:
-          version: '22.3.2'
           java-version: '17'
+          distribution: 'graalvm-community'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "📸 Build the Native Image"
