--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.20
-micronautVersion=4.4.2-SNAPSHOT
+micronautVersion=4.4.2
 kafkaVersion=NA
 micronautCoreVersion=4.4.8
 projectDesc=Generates Micronaut applications
