build: Micronaut core 4.4.10

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.20
 micronautVersion=4.4.3-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.4.9-SNAPSHOT
+micronautCoreVersion=4.4.10
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.4.3-SNAPSHOT
