--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -69,6 +69,8 @@ spring-boot-gradle-plugin = "3.2.4"
 spring-dependency-management-plugin = "1.1.4"
 micronaut-starter-aws-cdk = "4.3.7"
 spring-boot-starter-parent="3.2.4"
+graaljs = "24.0.1"  # Once this is bumped past 24.1, you should be able to remove the disabling of Loom in the config properties in the React feature.
+frontend-maven-plugin = "1.15.0"
 
 [libraries]
 spring-boot-starter-parent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "spring-boot-starter-parent" }
@@ -142,6 +144,8 @@ scram-client = { module = "com.ongres.scram:client", version.ref = "scram-client
 slf4j-simple-logger = { module = "io.goodforgod:slf4j-simple-logger", version.ref = "slf4j-simple-logger" }
 zeebe-micronaut-client = { module = "info.novatec:micronaut-zeebe-client-feature", version.ref = "zeebe-micronaut-client" }
 buildless-gradle-plugin = { module = "build.less:buildless-plugin-gradle", version.ref = "buildless" }
+graaljs-community = { module = "org.graalvm.polyglot:js-community", version.ref = "graaljs" }
+frontend-maven-plugin = { module = "com.github.eirslett:frontend-maven-plugin", version.ref = "frontend-maven-plugin" }
 
 [plugins]
 # This is an exception to the rule!
