--- a/starter-core/src/test/resources/expected-aot-native-image.properties
+++ b/starter-core/src/test/resources/expected-aot-native-image.properties
@@ -26,7 +26,7 @@ scan.reactive.types.enabled=true
 # Deduces the environment at build time instead of runtime
 deduce.environment.enabled=true
 
-# Checks of existence of some types at build time instead of runtime
+# Checks for the existence of some types at build time instead of runtime
 known.missing.types.enabled=true
 
 # Precomputes property sources at build time
