--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.21
-micronautVersion=4.5.1-SNAPSHOT
+micronautVersion=4.5.1
 kafkaVersion=NA
-micronautCoreVersion=4.5.4-SNAPSHOT
+micronautCoreVersion=4.5.4
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.5.1-SNAPSHOT
