--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.21
 micronautVersion=4.5.2-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.5.5-SNAPSHOT
+micronautCoreVersion=4.6.1
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.6.0-SNAPSHOT
