--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.21
-micronautVersion=4.6.0-SNAPSHOT
+micronautVersion=4.6.0
 kafkaVersion=NA
-micronautCoreVersion=4.6.1
+micronautCoreVersion=4.6.3
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.6.0-SNAPSHOT
