platform 4.6.1 and core 4.6.4

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.22
-micronautVersion=4.6.1-SNAPSHOT
+micronautVersion=4.6.1
 kafkaVersion=NA
-micronautCoreVersion=4.6.4-SNAPSHOT
+micronautCoreVersion=4.6.4
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.6.1-SNAPSHOT
