Switch to new Gradle Shadow plugin
Previously this plugin was developed by @johnrengelman and published under the ID com.github.johnrengelman.shadow before maintenance was transferred to the GradleUp organization to ensure future development

Functionally it's identical, but it doesn't have deprecation warnings like the old one started having

--- a/buildSrc/src/main/groovy/io.micronaut.internal.build.starter-cli-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.build.starter-cli-module.gradle
@@ -2,7 +2,7 @@ plugins {
     id "io.micronaut.internal.starter.published-module"
     id "io.micronaut.internal.starter.convention"
     id "application"
-    id "com.github.johnrengelman.shadow"
+    id "com.gradleup.shadow"
     id "io.micronaut.starter.rocker"
     id "io.sdkman.vendors"
 }
