--- a/starter-web-netty/build.gradle
+++ b/starter-web-netty/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "io.micronaut.internal.starter.convention"
-    id "com.github.johnrengelman.shadow"
+    id "com.gradleup.shadow"
     id "io.micronaut.crac"
     id "io.micronaut.application"
 }
