--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -70,6 +70,7 @@ micronaut-starter-aws-cdk = "4.6.0"
 spring-boot-starter-parent="3.3.0"
 graaljs = "24.0.2"  # Once this is bumped past 24.1, you should be able to remove the disabling of Loom in the config properties in the React feature.
 frontend-maven-plugin = "1.15.0"
+liquibase-slf4j = "5.0.0"
 
 [libraries]
 spring-boot-starter-parent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "spring-boot-starter-parent" }
@@ -144,6 +145,7 @@ zeebe-micronaut-client = { module = "info.novatec:micronaut-zeebe-client-feature
 buildless-gradle-plugin = { module = "build.less:buildless-plugin-gradle", version.ref = "buildless" }
 graaljs-community = { module = "org.graalvm.polyglot:js-community", version.ref = "graaljs" }
 frontend-maven-plugin = { module = "com.github.eirslett:frontend-maven-plugin", version.ref = "frontend-maven-plugin" }
+liquibase-slf4j = { module = "com.mattbertolini:liquibase-slf4j", version.ref = "liquibase-slf4j" }
 
 [plugins]
 # This is an exception to the rule!
