--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.22
 micronautVersion=4.6.3-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.6.6-SNAPSHOT
+micronautCoreVersion=4.6.6
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.6.3-SNAPSHOT
