--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.23
 micronautVersion=4.7.0-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.6.6
+micronautCoreVersion=4.7.0-SNAPSHOT
 projectDesc=Generates Micronaut applications
 githubBranch=master
-projectVersion=4.6.6-SNAPSHOT
+projectVersion=4.7.0-SNAPSHOT
