--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.22
-micronautVersion=4.6.3-SNAPSHOT
+micronautVersion=4.6.3
 kafkaVersion=NA
 micronautCoreVersion=4.6.6
 projectDesc=Generates Micronaut applications
